<resources>
    <string name="app_name">PTSTestTool</string>
    <string name="action_settings">Settings</string>
    <string name="action_hogp">HOGPTest</string>
    <string name="action_hid">HIDTest</string>
    <string name="action_a2dp">A2DPTest</string>
    <string name="action_avrcp">AVRCPTest</string>
    <string name="action_ssp">SSPTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
</resources>