<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mediatek.ptstesttool.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hogp"
        android:orderInCategory="100"
        android:title="@string/action_hogp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hid"
        android:orderInCategory="100"
        android:title="@string/action_hid"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_a2dp"
        android:orderInCategory="100"
        android:title="@string/action_a2dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_avrcp"
        android:orderInCategory="100"
        android:title="@string/action_avrcp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ssp"
        android:orderInCategory="100"
        android:title="@string/action_ssp"
        app:showAsAction="never" />
</menu>